Sigil 0.6.2 TBA
    - Fix issue 1816: Height is incorrect in Reports->Image Files.
    - Fix issue 1809: Fix crash related to cursor syncing.
    - Fix issue 1808: Editing in book view changes DTD to incorrect value.

Sigil 0.6.1 2012.12.02
    - Implement issue 1801: Audio and Video tags and files should be supported by Sigil.
    - Implement issue 1797: Clean Source should have preference options to set when it should run.
    - Implement issue 1768: Add non-destructive pretty printer as an option in addition to the Tidy provided one.
    - Implement issue 1770: Change Clean Source to no longer warn about restarting Sigil.
    - Implement issue 1767: Change default file extension from html to xhtml.
    - Implement issue 1695: Add tooltips to show counts of files in Book Browser and headings in Generate TOC.
    - Implement issue 1731: Delete files, Unused Images and Styles dialog should be scrollable and allow unselecting entries.
    - Implement issue 1735: Print stylesheets and other non-HTML files.
    - Implement issue 1758: Handle importing invalid files with duplicate IDs in OPF file.
    - Implement issue 1711: Reports should allow saving to comma separated text file.
    - Implement issue 1712: Reports should be non-modal and allow editing book while still open.
    - Implement issue 1748: Add a Copy Image context menu option for images.
    - Implement issue 1738: Move Generate Table of Contents button to toolbar.
    - Implement issue 1743: Insert Image should include an alt tag with filename.
    - Implement issue 1717: Allow more control of Author field in Metadata Editor.
    - Implement issue 1729: Bulk rename should allow changing file extension.
    - Implement issue 1728: Open/add invalid HTML files should show line numbers of error.
    - Implement issue 1742: Add context menu option in Preview View for Inspect Element.
    - Implement issue 1734: Splitting files and new blank HTML files should use existing file extension.